--- a/practica4/Dockerfile
+++ b/practica4/Dockerfile
@@ -7,4 +7,5 @@ RUN mkdir /tmp/ejemplo
             #crea un directorio en tmp llamado ejemplo
 COPY ejemplo.txt /tmp/ejemplo   
             #copia el fichero ejemplo.txt de mi pc en el directorio tmp/emjemplo de la imagen
-CMD ["cat","/tmp/ejemplo.txt"]
+#CMD ["cat","/tmp/ejemplo.txt"]
+CMD ["sleep","60"]
